Edit: Added navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,24 +4,22 @@
     </a>
 
     <ul class="navbar-nav mr-auto">
-        <%#
+        
         <li class="nav-item">
-            <a class="nav-link" href="/admin/muscles">Muscles</a>
+            <a class="nav-link" href="/admin/filament">Filaments</a>
         </li>
         
         <li class="nav-item">
-            <a class="nav-link" href="/admin/equipaments">Equipaments</a>
+            <a class="nav-link" href="/admin/resin">Resin</a>
         </li>
         
         <li class="nav-item">
-            <a class="nav-link" href="/admin/exercises">Exercises</a>
+            <a class="nav-link" href="/admin/threeDPrinters">3D printers</a>
         </li>
-        
-        
-        
+          
         <li class="nav-item">
-            <a class="nav-link" href="/admin/workouts">Workouts</a>
+            <a class="nav-link" href="/admin/projects">Printed Objects</a>
         </li>
-        %>
+        
     </ul>
 </nav>
