Edit: added ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     
         <div class="jumbotron">
             <h1 class="display-4">Welcome, Maker! I'm here to help you manage your 3D print journey<h1>
-            <p class="lead">Modeling ideas, printing dreams</p>
+            <p class="lead">Conceiving ideas, printing dreams</p>
             <hr class="my-4">
         </div>
 
