edit: update navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,13 +6,13 @@
     <ul class="navbar-nav mr-auto">
         
         <li class="nav-item">
-            <a class="nav-link" href="/admin/filament">Filaments</a>
+            <a class="nav-link" href="/admin/filament">Material</a>
         </li>
-        
+        <%#
         <li class="nav-item">
             <a class="nav-link" href="/admin/resin">Resin</a>
         </li>
-        
+         %>
         <li class="nav-item">
             <a class="nav-link" href="/admin/threeDPrinters">3D printers</a>
         </li>
